# autocopy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Package.swift  README.md  README_Swift.md  SECURITY.md  install.sh  validate.swift
.github/workflows/: ci.yml  release.yml
AutoCopy/: AutoCopyApp.swift
AutoCopy.xcodeproj/: project.pbxproj
AutoCopy/Core/: AppCoordinator.swift  ConfigManager.swift  Constants.swift  InstanceManager.swift  LogManager.swift  PermissionManager.swift  Types.swift
AutoCopy/Features/: AutoStartManager.swift  ClickDetector.swift  ClipboardManager.swift  EventListener.swift  ToastManager.swift
AutoCopy/Resources/: AutoCopy.entitlements  Info.plist
AutoCopy/Resources/Assets.xcassets/StatusBarIcon.imageset/: Contents.json
AutoCopy/UI/: StatusBarManager.swift
configs/: autocopy.template.ini  default-config
docs/plan/: autocopy-swift-implementation-plan.md
install/: install.sh  uninstall-macos.sh
scripts/: install-macos.sh  package.sh
src/: clipboard.rs  config.rs  logger.rs  main.rs
