[package]
name = "autocopy"
version = "0.1.0"
edition = "2021"
description = "Auto-copy selected text to clipboard on mouse release"
license = "MIT"

[dependencies]
# macOS
core-graphics = { version = "0.24", optional = true }
core-foundation = { version = "0.10", optional = true }
objc2 = { version = "0.5", optional = true }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"], optional = true }

# Cross-platform
configparser = "3.1"
log = "0.4"
simplelog = "0.12"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["macos"]
macos = ["dep:core-graphics", "dep:core-foundation", "dep:objc2", "dep:objc2-app-kit"]

[[bin]]
name = "autocopy"
path = "src/main.rs"
